# NFLBigDataBowl2023

./: EDA.ipynb  README.md  pyproject.toml
src/: amimate_play.py  app.py  load_data.py  player_heatmap.py
src/assets/: header.css
